#85 ISSUE - Desktop - Match fields and red button should align

--- a/src/styles/voter/_matchlist.scss
+++ b/src/styles/voter/_matchlist.scss
@@ -28,7 +28,6 @@
     }
   #button-row {
     display: flex;
-    justify-content: center;
     #button {
       margin-top: 20px;
     }
